--- a/package.json
+++ b/package.json
@@ -2,9 +2,14 @@
   "dependencies": {
     "art-template": "^4.13.2",
     "body-parser": "^1.20.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-jwt": "^7.7.5",
+    "express-session": "^1.17.3",
     "jquery": "^3.6.0",
-    "moment": "^2.29.4"
+    "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.4",
+    "mysql": "^2.18.1"
   },
   "name": "helloworld",
   "version": "1.0.0",
